--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^6.0.2"
+    "react-markdown": "^6.0.2",
+    "reading-time": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "7.30.0",
